@@ -1,5 +1,5 @@
 {doctype}
-<!-- '"  /></a> {doctype} <!--  The desperate attempt to clean up some still open tags -->
+</a></option></select><!-- '"  /></a></option></select> {doctype} <!--  The desperate attempt to clean up some still open tags -->
 </script>
 <html>
     <head>
