@@ -23,6 +23,7 @@
 - Bugfix: Fixed codewrapper2 for the code generation in the Hans
   skin.
 - Bugfix: Source generation for closures now work as expected.
+- Bugfix: Better cleanup for still open HTML tags.
 
 2.3.1
 - Bugfix: Fixed shell detection.
